<resources>
    <string name="app_name">AndroidGridLayout</string>
    <string name="grid">GRID LAYOUT DESIGN</string>
    <string name="me">Me</string>
    <string name="activity_one">Activity One</string>
    <string name="homedash">Dashboard</string>
    <string name="my_mail">asmajahidcse@gmail.com</string>
    <string name="follow_me">Follow Me</string>
    <string name="phoneno">+8801751584255</string>
    <string name="subscribe_me">SUBSCRIBE NOW</string>
    <string name="digit">36,520</string>
    <string name="clients_subscribed_right_now">CLIENTS SUBSCRIBED RIGHT NOW</string>
    <string name="Hello">hello</string>

    <string-array name="list">
        <item>Books</item>
        <item>Restaurant</item>
        <item>Customs</item>
        <item> Airport </item>
    </string-array>

</resources>
