<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    tools:context="com.asmjahid.gridlayoutdesgin.ActivityWelcome">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:text="@string/digit"
            android:textColor="@color/backgroundcolor"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/clients_subscribed_right_now"
            android:textAlignment="center"
            android:textColor="@color/backgroundcolor"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonstyle"
            android:text="@string/subscribe_me" />

    </LinearLayout>


</LinearLayout>